Added splash screen window

--- a/public/splash.html
+++ b/public/splash.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <script src="../../renderer.js"></script>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./splash.css" />
     <title>Loader</title>
   </head>
-  <body>
-    <div class="first-loader">
-      <h3 id="splash-status">Checking For Updates</h3>
-      <div class="newtons-cradle">
-        <div class="newtons-cradle__dot"></div>
-        <div class="newtons-cradle__dot"></div>
-        <div class="newtons-cradle__dot"></div>
-        <div class="newtons-cradle__dot"></div>
+  <body data-tauri-drag-region>
+    <div data-tauri-drag-region class="first-loader">
+      <h3 data-tauri-drag-region id="splash-status">Checking For Updates</h3>
+      <div data-tauri-drag-region class="newtons-cradle">
+        <div data-tauri-drag-region class="newtons-cradle__dot"></div>
+        <div data-tauri-drag-region class="newtons-cradle__dot"></div>
+        <div data-tauri-drag-region class="newtons-cradle__dot"></div>
+        <div data-tauri-drag-region class="newtons-cradle__dot"></div>
       </div>
-      <progress id="downloadProgress" value="0" max="100"></progress>
+      <progress data-tauri-drag-region id="downloadProgress" value="0" max="100"></progress>
     </div>
   </body>
 </html>
