--- a/public/splash.html
+++ b/public/splash.html
@@ -7,15 +7,35 @@
     <title>Loader</title>
   </head>
   <body data-tauri-drag-region>
+    <script>
+      (async () => {
+        await window.__TAURI__.event.listen(
+          "updateDownloadProgress",
+          (event) =>
+            (document.getElementById("download-progress").value = event.payload)
+        );
+        await window.__TAURI__.event.listen(
+          "updateStatus",
+          (event) =>
+            (document.getElementById("splash-status").innerText = event.payload)
+        );
+        await window.__TAURI__.tauri.invoke("update_sheller");
+      })();
+    </script>
     <div data-tauri-drag-region class="first-loader">
-      <h3 data-tauri-drag-region id="splash-status">Checking For Updates</h3>
+      <h3 data-tauri-drag-region id="splash-status">Preparing...</h3>
       <div data-tauri-drag-region class="newtons-cradle">
         <div data-tauri-drag-region class="newtons-cradle__dot"></div>
         <div data-tauri-drag-region class="newtons-cradle__dot"></div>
         <div data-tauri-drag-region class="newtons-cradle__dot"></div>
         <div data-tauri-drag-region class="newtons-cradle__dot"></div>
       </div>
-      <progress data-tauri-drag-region id="downloadProgress" value="0" max="100"></progress>
+      <progress
+        data-tauri-drag-region
+        id="download-progress"
+        value="0"
+        max="100"
+      ></progress>
     </div>
   </body>
 </html>
